# CMS

./: .gitignore  Makefile
backend/: Cargo.toml
backend/src/: main.rs  swagger_ui.html
backend/src/api/: mod.rs
backend/src/api/handlers/: default_impl.rs  mod.rs
backend/src/api_impl/: default_impl.rs  mod.rs
backend/static/: swagger_ui.html
frontend/: package-lock.json
frontend/src/: App.tsx
frontend/src/components/: TextField.tsx
openapi/: api.yaml
